# TerminalCaptionPlayer

./: CMakeLists.txt  README.md  play_captions.cpp  workspace.code-workspace
